<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#fff"
    tools:context=".crashlytics.DefaultErrorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_centerInParent="true"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_crash" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/crash_occurred_explanation"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/crash_restart_button"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="#388E3C"
                        android:gravity="center"
                        android:padding="4dp"
                        android:foreground="?selectableItemBackground"
                        android:text="@string/crash_restart_app"
                        android:textColor="#fff"
                        tools:ignore="UnusedAttribute" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/crash_close_button"
                        style="@style/TextAppearance.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        android:layout_weight="1"
                        android:background="#DB2C1F"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/crash_close_app"
                        android:textColor="#fff"
                        android:focusable="true"
                        tools:ignore="UnusedAttribute" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/crash_more_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crash_error_details"
                android:textColor="?colorPrimaryDark" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#113BA4FF">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>