<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="16dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundLight"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dq_iv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorInfo"
            android:contentDescription="@string/app_name"
            android:padding="48dp"
            android:tint="@color/colorIconLight"
            app:srcCompat="@drawable/question" />

        <TextView
            android:id="@+id/dq_txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:minLines="3"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/dq_card_btn_no"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/colorError"
                app:cardCornerRadius="15dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/dq_txt_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/lblCancel"
                    android:textColor="@color/colorTextLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dq_card_btn_ok"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/colorOk"
                app:cardCornerRadius="15dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/dq_txt_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/lblConfirm"
                    android:textColor="@color/colorTextLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
